--- a/CriminalIntent/res/values/strings.xml
+++ b/CriminalIntent/res/values/strings.xml
@@ -19,5 +19,6 @@
 	<string name="hide_subtitle">Hide Subtitle</string>
 	<string name="subtitle">If you see something,say something.</string>
 	<string name="delete_crime">Delete</string>
+	<string name="_crime_">没有crime记录可以显示</string>
 	
 </resources>
